# SQD

./: .gitattributes  .gitignore  CMakeLists.txt  ESP32_S3_SQD_Project_WBS.xlsx  Phase_A_Industrial_Documentation_Handbook.md  README.md  VALIDATION_REPORT.md  manifest.json  sdkconfig.defaults
.github/workflows/: README.md
components/app/: README.md
components/board/: README.md
components/build_metadata/: CMakeLists.txt
components/connectivity/: README.md
components/diagnostics/: README.md
components/platform/: README.md
components/security/: README.md
components/services/: README.md
components/storage/: README.md
components/update/: README.md
docs/: Document_Control_Standard.md  Requirements_Writing_Standard.md  Technical_Reference_Baseline.md  Verification_Evidence_Standard.md
docs/diagrams/: Device_State_Model.md  README.md  System_Context_Diagram.md
docs/evidence/: Evidence_Index.md  README.md
docs/evidence/datasheets/: README.md
docs/evidence/logs/: README.md
docs/evidence/measurements/: README.md
docs/phase-a/: A1.1_Product_Concept.md  A1.2_Operating_Scenarios.md  A1.3_System_Context.md  A1_Product_Concept_Definition.md  A2.1_Functional_Requirements.md  A2.2_Nonfunctional_Requirements.md  A2.3_Interface_Control_Document.md  A2.4_Requirements_Traceability.md  A2_Requirements_Engineering.md  A3.1_Hardware_Feasibility.md  A3.2_Feasibility_POC_Report.md  A3.3_Phase_A_Gate_Record.md  A3_Feasibility_and_Risk_Analysis.md  Phase_A_Execution_Checklist.md  Phase_A_Product_Definition_and_Planning.md
docs/phase-b/: B1.1_Development_Environment_Setup.md  B1.3_Developer_Setup_Guide.md  B1.3_Onboarding_Checklist.md  B2.1_Repository_Baseline.md  B2.2_Acceptance_Record.md  B2.2_Bootstrap_Exception_Record.md
docs/risks/: Risk_Register.md  Threat_Model.md
factory/: README.md
main/: main.c
partitions/: README.md
prototypes/: README.md
prototypes/lorawan-poc/: README.md
prototypes/ota-poc/: README.md
prototypes/provisioning-poc/: README.md
prototypes/sleep-poc/: README.md
prototypes/storage-recovery-poc/: README.md
prototypes/tls-poc/: README.md
recovery/: README.md
test_apps/: README.md
tools/config/: B3.3_configuration_baseline.json  B3.3_size_budget.json  B3.3_toolchain_baseline.json
tools/manifests/: B1.1_tool_versions.json
tools/scripts/: B1.3_Verify_Workstation.ps1.bak_20260714_131109  B1.3_Verify_Workstation.ps1.bak_20260716_082352  B1.3_Verify_Workstation.ps1.bak_20260716_090537  B2.1_Initialize_Repository.ps1  B2.1_Verify_Clean_Clone.ps1  B2.3_Verify_Metadata_Secrets.ps1  B3.3_Common.ps1  B3.3_ConfigDrift.ps1  B3.3_Reproducibility.ps1  B3.3_SizeBudget.ps1  B3.3_ToolchainGuard.ps1  B3.3_Verify.ps1
verification/b1_2_minimal/: CMakeLists.txt
(+42 files in other folders)
