idf_component_register(
    SRCS "sqd_build_metadata.c"
    INCLUDE_DIRS "include"
    PRIV_REQUIRES esp_app_format log
)

get_filename_component(SQD_REPO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../.." ABSOLUTE)
find_package(Git REQUIRED)
file(READ "${SQD_REPO_ROOT}/VERSION" SQD_PRODUCT_VERSION)
string(STRIP "${SQD_PRODUCT_VERSION}" SQD_PRODUCT_VERSION)

execute_process(COMMAND "${GIT_EXECUTABLE}" rev-parse HEAD WORKING_DIRECTORY "${SQD_REPO_ROOT}" OUTPUT_VARIABLE SQD_GIT_COMMIT OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ERROR_IS_FATAL ANY)
execute_process(COMMAND "${GIT_EXECUTABLE}" rev-parse --short=12 HEAD WORKING_DIRECTORY "${SQD_REPO_ROOT}" OUTPUT_VARIABLE SQD_GIT_COMMIT_SHORT OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ERROR_IS_FATAL ANY)
execute_process(COMMAND "${GIT_EXECUTABLE}" status --porcelain --untracked-files=no WORKING_DIRECTORY "${SQD_REPO_ROOT}" OUTPUT_VARIABLE SQD_GIT_STATUS OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ERROR_IS_FATAL ANY)
execute_process(COMMAND "${GIT_EXECUTABLE}" show -s --format=%ct HEAD WORKING_DIRECTORY "${SQD_REPO_ROOT}" OUTPUT_VARIABLE SQD_SOURCE_DATE_EPOCH OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ERROR_IS_FATAL ANY)

if(NOT SQD_SOURCE_DATE_EPOCH MATCHES "^[0-9]+$")
    message(FATAL_ERROR "Git commit timestamp is invalid: ${SQD_SOURCE_DATE_EPOCH}")
endif()

set(SQD_SAVED_SOURCE_DATE_EPOCH "$ENV{SOURCE_DATE_EPOCH}")
set(ENV{SOURCE_DATE_EPOCH} "${SQD_SOURCE_DATE_EPOCH}")

string(TIMESTAMP SQD_SOURCE_TIMESTAMP_UTC "%Y-%m-%dT%H:%M:%SZ" UTC)
string(TIMESTAMP SQD_BUILD_TIMESTAMP_UTC "%Y-%m-%dT%H:%M:%SZ" UTC)

if(SQD_SAVED_SOURCE_DATE_EPOCH STREQUAL "")
    unset(ENV{SOURCE_DATE_EPOCH})
else()
    set(ENV{SOURCE_DATE_EPOCH} "${SQD_SAVED_SOURCE_DATE_EPOCH}")
endif()

if(SQD_GIT_STATUS STREQUAL "")
    set(SQD_GIT_DIRTY 0)
    set(SQD_GIT_DIRTY_STRING "false")
else()
    set(SQD_GIT_DIRTY 1)
    set(SQD_GIT_DIRTY_STRING "true")
endif()


set(SQD_BUILD_PROFILE "$ENV{SQD_BUILD_PROFILE}")
if(SQD_BUILD_PROFILE STREQUAL "")
    set(SQD_BUILD_PROFILE "baseline")
endif()
set(SQD_TARGET "${IDF_TARGET}")
if(SQD_TARGET STREQUAL "")
    set(SQD_TARGET "esp32s3")
endif()
set(SQD_HARDWARE_COMPATIBILITY "$ENV{SQD_HARDWARE_COMPATIBILITY}")
if(SQD_HARDWARE_COMPATIBILITY STREQUAL "")
    set(SQD_HARDWARE_COMPATIBILITY "heltec-wifi-lora-32-v3")
endif()

configure_file("${CMAKE_CURRENT_LIST_DIR}/include/sqd_build_metadata_generated.h.in" "${CMAKE_CURRENT_BINARY_DIR}/include/sqd_build_metadata_generated.h" @ONLY)
target_include_directories(${COMPONENT_LIB} PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/include")
target_link_libraries(${COMPONENT_TARGET} "-u sqd_build_metadata_blob")
